# src/controllers/todo.controllers.js
@@ -53,4 +53,62 @@ const getTodoById = asyncHandler(async (req, res) => {
     .json(new ApiResponse(200, todo, "Todo fetched successfully"));
 });
 
-export { createTodo, getAllTodos, getTodoById };
+const updateTodo = asyncHandler(async (req, res) => {
+  const { todoId } = req.params;
+  const { title, description } = req.body;
+  const todo = await Todo.findByIdAndUpdate(
+    todoId,
+    {
+      $set: {
+        title,
+        description,
+      },
+    },
+    { new: true }
+  );
+  if (!todo) {
+    throw new ApiError(400, "Todo does not exist");
+  }
+  return res
+    .status(200)
+    .json(new ApiResponse(200, todo, "Todo updated successfully"));
+});
+const deleteTodo = asyncHandler(async (req, res) => {
+  const { todoId } = req.params;
+  const todo = await Todo.findByIdAndDelete(todoId);
+  if (!todo) {
+    throw new ApiError(404, "Todo does not exist");
+  }
+  return res
+    .status(200)
+    .json(
+      new ApiResponse(200, { deletedTodo: todo }, "Todo deleted successfully")
+    );
+});
+const toggleTodoDoneStatus = asyncHandler(async (req, res) => {
+  const { todoId } = req.params;
+  const todo = await Todo.findById(todoId);
+  if (!todo) {
+    throw new ApiError(404, "Todo does not exist");
+  }
+  todo.isComplete = !todo.isComplete;
+  await todo.save({ ValidateBeforeSave: false });
+  return res
+    .status(200)
+    .json(
+      new ApiResponse(
+        200,
+        todo,
+        "Todo marked" + todo.isComplete ? "done" : "undone"
+      )
+    );
+});
+
+export {
+  createTodo,
+  getAllTodos,
+  getTodoById,
+  updateTodo,
+  deleteTodo,
+  toggleTodoDoneStatus,
+};
